Thu Jan 24 20:36:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          Further improvements for partial image support

Thu Jan 24 19:51:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          Added a second build target when building an executable. We
          first build a partial image which we then link with all
          the other libraries. This matches more the way we build
          using the GNU makefiles. At the end we want to get rid of
          the libraries as project contents but that still seems to
          be needed.

Thu Jan 24 19:07:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          When building an executable also add the libraries used to the
          project contents. Only at that moment they are also added to
          the list of files that need to be munched. The other option
          would be to use the ADDED_OBJECTS in the .wrmakefile file but
          to nmppc we have to pass the full path of all the libraries
          and we don't have that information.

Thu Jan 24 16:11:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrproject.mpd:
          Fixed contents generation because the project name got changed

Thu Jan 24 16:01:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:
          Committed fix of Chad Elliot so that the generation of the build
          order for the wb26 project type does work.

        * modules/WB26WorkspaceCreator.pm:
          Fixed comment about location of the file

Thu Jan 24 13:46:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26WorkspaceCreator.pm:
          The build order is stored in an eclipse file, generate this
          file so that we can control the build order easily. By