@@ -13,10 +13,9 @@ package WB26WRPROJECTProjectCreator;
 use strict;
 
 use ProjectCreator;
-use XMLProjectBase;
 
 use vars qw(@ISA);
-@ISA = qw(XMLProjectBase ProjectCreator);
+@ISA = qw(ProjectCreator);
 
 # ************************************************************
 # Subroutine Section
@@ -27,9 +26,9 @@ sub crlf {
   return "\n";
 }
 
-sub project_file_extension {
-  #my($self) = shift;
-  return '/.wrproject';
+sub project_file_name {
+  my($self) = shift;
+  return $self->get_modified_project_file_name($self->project_name(), '/.wrproject');
 }
 
 sub get_template {
