@@ -1,3 +1,9 @@
+Sat Jan 26 07:10:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * modules/WB26WRMAKEFILEProjectCreator.pm:
+        * modules/WB26WRPROJECTProjectCreator.pm:
+          Cleanup
+
 Thu Jan 24 20:36:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * templates/wb26wrproject.mpd:
